changed typo and added github link

--- a/src/projects.json
+++ b/src/projects.json
@@ -19,7 +19,7 @@
         "shortDescription": "Project C was een schoolproject. We moesten een webshop maken door gebruik te maken van een front-end framework. We hebben ReactJS gebruikt voor de front-end en .NET voor de back-end.",
         "beginDate": "09-12-2018",
         "productOwner": "Hogeschool Rotterdam",
-        "longDescription": "Tijdens dit project heb ik veel ervaring opgedaan voor React en .NET. We kregen een iets minder dan een half schooljaar om het product te voltooien. Het idee was om een studenten webshop te maken, waarmee klanten Het project ging me goed af en we hebben er dan ook een 8.1 voor gekregen. De front-end heb ik volledig zelf gemaakt, en ik heb ook meegewerkt aan de back-end. Ik heb veel inspiratie opgedaan door het bekijken van andere webshops. Echter heb ik het design zelf ontworpen en zijn er geen externe UI libraries te pas gekomen.",
+        "longDescription": "Tijdens dit project heb ik veel ervaring opgedaan voor React en .NET. We kregen een iets minder dan een half schooljaar om het product te voltooien. Het idee was om een studenten webshop te maken, waarmee klanten producten konden kopen. Het project ging me goed af en we hebben er dan ook een 8.1 voor gekregen. De front-end heb ik geheel zelf gemaakt, en ik heb ook meegewerkt aan de back-end. Ik heb veel inspiratie opgedaan door het bekijken van andere webshops. Echter heb ik het design zelf ontworpen en zijn er geen externe UI libraries te pas gekomen.",
         "coverImage": "https://drive.google.com/uc?export=view&id=1ByWhuOSWDYZRujrQX8ec5doqLRAbtb6N",
         "screenshots": [
             "https://drive.google.com/uc?export=view&id=1Sqa50JX_jf1ce1bT-9nMKB2XZepa_mo5",
