--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "npm": "^6.8.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-pdf": "^4.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "sendemail": "^3.4.0",
