--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-pdf": "^4.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-scroll": "^1.7.14",
     "sendemail": "^3.4.0",
     "yup": "^0.27.0"
   },
