--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "private": true,
   "homepage": "https://www.jvink.github.io/portfolio",
   "dependencies": {
-    "formik": "^1.5.1",
+    "lightbox-react": "^0.3.7",
     "mdi-react": "^5.3.0",
     "moment": "^2.24.0",
-    "npm": "^6.8.0",
+    "npm": "^6.12.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-pdf": "^4.0.5",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
-    "react-scroll": "^1.7.14",
-    "sendemail": "^3.4.0",
-    "yup": "^0.27.0"
+    "react-scripts": "^3.2.0",
+    "react-scroll": "^1.7.14"
   },
   "scripts": {
     "start": "react-scripts start",
